--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,11 @@
       <artifactId>headlib</artifactId>
       <version>3.0.1</version>
     </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <version>3.9</version>
+    </dependency>
 
   </dependencies>
 
@@ -77,6 +82,7 @@
               <artifactSet>
                 <includes>
                   <include>de.erethon:headlib</include>
+                  <include>org.apache.commons:commons-lang3</include>
                 </includes>
               </artifactSet>
             </configuration>
