--- a/pom.xml
+++ b/pom.xml
@@ -58,10 +58,17 @@
       <artifactId>headlib</artifactId>
       <version>3.0.1</version>
     </dependency>
+    <!-- Lang3 3.9 -->
     <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-lang3</artifactId>
       <version>3.9</version>
+    </dependency>
+    <!-- JSON 20180813 -->
+    <dependency>
+      <groupId>org.json</groupId>
+      <artifactId>json</artifactId>
+      <version>20180813</version>
     </dependency>
 
   </dependencies>
@@ -83,6 +90,7 @@
                 <includes>
                   <include>de.erethon:headlib</include>
                   <include>org.apache.commons:commons-lang3</include>
+                  <include>org.json:json</include>
                 </includes>
               </artifactSet>
             </configuration>
