--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,5 +2,5 @@ name: TLHub
 version: 1.0
 main: net.timelegacy.tlhub.TLHub
 author: Nyarrth
-depend: [TLCore, TTA]
+depend: [TLCore]
 api-version: 1.13
